# doe

./: .gitignore  CHANGELOG.txt  README.md  STORAGE.md  STORAGE_FOR_AGENTS.md  log.txt  pixi.toml  pyproject.toml
config/: config.yaml  enzyme.yaml
data/: test.json  test_conditions.json  train-43.json  train_conditions-43.json
data/experiments/: condition_ranges.json
data/models/: enzyme-no-inhib.json  enzyme.json  enzyme.parameters.json  simple.parameters.json  super-model-1.json  super-model-1.parameters.json  super-model-2.json  super-model-2.parameters-123456789.json  super-model-2.parameters.json  super-model-3-corrected-parameters.json  super-model-3-corrected.json  super-model-3.json  (+3 more)
doe/: __init__.py  dataset.py  store.py
experiments/: contrastive-GP.ipynb
mcp/: compute_tools.py  config_tools.py  mcp_contracts.py  mcp_engine.py  mcp_simulation.py  mcp_tools.py  resolver_base.py  server.py  simulate_tools.py  store.py  store_tools.py
scripts/: discriminate_doe.py  evaluate.py  experiment.py  fit_kernel_scale.py  gp_discriminate.py  gp_doe.py  gp_fit.py  gp_hyperfit.py  gp_predict.py  kernel_hypers.json  kernel_hypers_mm.json  kernel_hypers_noinhib.json  make_store_example.py  mle.py  new_exp.py  oed.py  test.py
tests/: bench_gp.py  measurements.json  simple.json  test_custom_ode.py  test_discriminative_doe.py  test_doe_testbed.py  test_fisher.py  test_gp.py  test_gradient.py  test_kinetics.py  test_mle.py  test_mle_scipy.py  test_mm_posterior.py  test_model_base.py  test_observable_jac.py  test_scan_clip_grad.py  test_solve_jac.py  test_stiff_mle.py
(+41 files in other folders)
